// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change tabs data 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="background-color: rgb(255, 68, 68);"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <div><span>title2</span></div>
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`change tabs data 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="background-color: rgb(255, 68, 68); width: 2px; transform: translateX(-1px);"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="background-color: rgb(255, 68, 68); width: 2px; transform: translateX(-1px);"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="background-color: rgb(255, 68, 68); width: 2px; transform: translateX(-1px);"></div>
      <div class="van-tab"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab van-tab--active">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="display: none;">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="">
      Text
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="background-color: rgb(255, 68, 68); width: 2px; transform: translateX(-1px);"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="background-color: rgb(255, 68, 68); width: 2px; transform: translateX(-1px);"></div>
      <div class="van-tab"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab van-tab--active">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="display: none;">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="">
      Text
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 3`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="background-color: rgb(255, 68, 68); width: 2px; transform: translateX(-1px);"></div>
      <div class="van-tab"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab van-tab--active">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="display: none;">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="">
      Text
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 4`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="background-color: rgb(255, 68, 68); width: 2px; transform: translateX(-1px);"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">title1</span></div>
      <div class="van-tab">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tab__pane" style="">Text
      <!---->
    </div>
    <div class="van-tab__pane" style="display: none;">
      Text
    </div>
    <div class="van-tab__pane" style="display: none;">
      <!---->
      <!---->
    </div>
  </div>
</div>
`;
